# mnemoverse-slod-paper

./: .gitignore  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
experiments/: ablation_runner.py  ablation_runner_binary_knn.py  ablation_runner_euclidean.py  ablation_runner_random_points.py  aggregate_ablation.py  bench_scaling.py  merge_parallel_outputs.py  parallel_runner.py  plot_ablation_curves.py  plot_ablation_profiles.py  verify_paper_claims.py
experiments/exp1_hsbm/: plot_exp1.py  run_additional_r.py  run_exp1.py  run_exp1_multir.py  run_exp1_multir_seeds.py  smoke_test.py
experiments/exp2_wordnet/: plot_exp2.py  run_exp2.py
paper/: slod.bib  slod_arxiv_v2.tex
paper/tables/: ablation.tex
results/exp1/: ablation.json  ablation_agg.json  ablation_binary_knn.json  ablation_cache_r200_s42.pkl  ablation_euclidean.json  ablation_random_points.json  multir_direct.json  multir_seeds.json
scripts/: plot_dw_vs_inv_lambda.py  repro_figures.sh  repro_table1.sh  repro_table2.sh  repro_tables_3_4.sh  verify_appendix_a.py
src/slod/: __init__.py
src/slod/boundary/: __init__.py  indicators.py  multicenter.py  scanner.py  spectral.py
src/slod/core/: __init__.py  frechet_mean.py  heat_kernel.py  poincare.py  slod_operator.py
src/slod/utils/: __init__.py  data.py  embedding_quality.py  metrics.py  wordnet_loader.py
tests/: conftest.py  test_data.py  test_frechet_mean.py  test_heat_kernel.py  test_indicators.py  test_metrics.py  test_poincare.py  test_scanner.py  test_spectral.py
